gcc/testsuite/rust/rustc/ui/did_you_mean/issue-38147-3.rs
struct Qux<'a> {
    s: &'a String
}

impl<'a> Qux<'a> {
    fn f(&self) {
        self.s.push('x');
// { dg-error ".E0596." "" { target *-*-* } .-1 }
    }
}

fn main() {}

